CREATE TABLE "org_units" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "parent_id" int
);

CREATE TABLE "users" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "org_unit_id" int NOT NULL,
  "first_name" varchar NOT NULL,
  "father_name" varchar NOT NULL,
  "last_name" varchar NOT NULL,
  "jmbg" varchar(13) UNIQUE NOT NULL,
  "job_title" varchar NOT NULL,
  "work_phone" varchar,
  "mobile_phone" varchar,
  "email" varchar UNIQUE NOT NULL,
  "password_hash" varchar NOT NULL,
  "is_active" bool DEFAULT true,
  "created_at" timestamp
);

CREATE TABLE "roles" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar UNIQUE NOT NULL
);

CREATE TABLE "user_roles" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "role_id" int NOT NULL,
  "org_unit_id" int,
  "is_permanent" bool NOT NULL DEFAULT true,
  "valid_from" date,
  "valid_to" date,
  "note" text
);

CREATE TABLE "meeting_categories" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar UNIQUE NOT NULL
);

CREATE TABLE "meetings" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "topic" varchar NOT NULL,
  "category_id" int NOT NULL,
  "organizer_id" int NOT NULL,
  "org_unit_id" int NOT NULL,
  "meeting_type" varchar NOT NULL,
  "recurrence" varchar,
  "scheduled_at" timestamp NOT NULL,
  "location" varchar NOT NULL,
  "room" varchar NOT NULL,
  "status" varchar NOT NULL DEFAULT 'PLANIRAN',
  "status_reason" text,
  "act_number" varchar,
  "act_date" date,
  "act_organization" varchar,
  "intro" text,
  "conclusion" text,
  "created_at" timestamp
);

CREATE TABLE "agenda_items" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "meeting_id" int NOT NULL,
  "order_no" int NOT NULL,
  "title" varchar NOT NULL,
  "discussion" text
);

CREATE TABLE "agenda_proposals" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "agenda_item_id" int NOT NULL,
  "participant_id" int,
  "content" text NOT NULL
);

CREATE TABLE "meeting_participants" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "meeting_id" int NOT NULL,
  "user_id" int,
  "external_person_id" int,
  "role_in_meeting" varchar NOT NULL,
  "is_planned" bool NOT NULL DEFAULT true,
  "attended" bool,
  "substitute_for_id" int,
  "recorded_at" timestamp
);

CREATE TABLE "external_persons" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "organization" varchar NOT NULL,
  "first_name" varchar NOT NULL,
  "last_name" varchar NOT NULL,
  "job_title" varchar,
  "country" varchar,
  "rank" varchar
);

CREATE TABLE "notifications" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int NOT NULL,
  "meeting_id" int,
  "type" varchar NOT NULL,
  "message" text NOT NULL,
  "is_read" bool DEFAULT false,
  "created_at" timestamp
);

CREATE TABLE "reports" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "requested_by" int NOT NULL,
  "report_type" varchar NOT NULL,
  "period" varchar,
  "meeting_id" int,
  "generated_at" timestamp
);

COMMENT ON COLUMN "org_units"."parent_id" IS 'hijerarhija celina, NULL za koren';

COMMENT ON COLUMN "roles"."name" IS 'ADMIN, RUKOVODILAC, ZAPISNICAR, UCESNIK';

COMMENT ON COLUMN "user_roles"."org_unit_id" IS 'za rukovodioca - celina kojom rukovodi';

COMMENT ON COLUMN "user_roles"."valid_to" IS 'NULL za stalne';

COMMENT ON COLUMN "user_roles"."note" IS 'napomena za privremene uloge';

COMMENT ON COLUMN "meeting_categories"."name" IS 'referisanje, savet, sluzbeni razgovor, radni tim, komisija, analiza, kolegijum';

COMMENT ON COLUMN "meetings"."organizer_id" IS 'rukovodilac sastanka';

COMMENT ON COLUMN "meetings"."org_unit_id" IS 'celina u kojoj se odrzava';

COMMENT ON COLUMN "meetings"."meeting_type" IS 'STALNI ili VANREDNI';

COMMENT ON COLUMN "meetings"."recurrence" IS 'DNEVNI/NEDELJNI/MESECNI/TROMESECNI/SESTOMESECNI/GODISNJI, NULL za vanredne';

COMMENT ON COLUMN "meetings"."status" IS 'PLANIRAN/ODRZAN/ODLOZEN/OTKAZAN';

COMMENT ON COLUMN "meetings"."status_reason" IS 'obrazlozenje odlaganja/otkazivanja';

COMMENT ON COLUMN "meetings"."act_number" IS 'delovodni broj ako je iniciran aktom';

COMMENT ON COLUMN "meetings"."intro" IS 'uvodna rec rukovodioca';

COMMENT ON COLUMN "meetings"."conclusion" IS 'zakljucak';

COMMENT ON COLUMN "agenda_items"."discussion" IS 'diskusija po tacki';

COMMENT ON COLUMN "agenda_proposals"."participant_id" IS 'ko je izneo predlog';

COMMENT ON COLUMN "meeting_participants"."user_id" IS 'NULL za eksterna lica';

COMMENT ON COLUMN "meeting_participants"."external_person_id" IS 'NULL za zaposlene';

COMMENT ON COLUMN "meeting_participants"."role_in_meeting" IS 'RUKOVODILAC/ZAPISNICAR/UCESNIK';

COMMENT ON COLUMN "meeting_participants"."attended" IS 'NULL dok se ne evidentira';

COMMENT ON COLUMN "meeting_participants"."substitute_for_id" IS 'ako je zamena, koga menja';

COMMENT ON COLUMN "meeting_participants"."recorded_at" IS '72h pravilo';

COMMENT ON COLUMN "external_persons"."country" IS 'ako nisu drzavljani RS';

COMMENT ON COLUMN "external_persons"."rank" IS 'cin';

COMMENT ON COLUMN "notifications"."meeting_id" IS 'NULL za sistemske notifikacije';

COMMENT ON COLUMN "notifications"."type" IS 'USPESNO/NEUSPESNO/PROMENA_OD_DRUGOG';

COMMENT ON COLUMN "reports"."report_type" IS 'SKRACENI/POTPUNI/SUMARNI';

COMMENT ON COLUMN "reports"."period" IS 'NEDELJNI/MESECNI/GODISNJI za sumarne';

COMMENT ON COLUMN "reports"."meeting_id" IS 'za skraceni/potpuni';

ALTER TABLE "users" ADD FOREIGN KEY ("org_unit_id") REFERENCES "org_units" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "user_roles" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "user_roles" ADD FOREIGN KEY ("role_id") REFERENCES "roles" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "meetings" ADD FOREIGN KEY ("category_id") REFERENCES "meeting_categories" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "meetings" ADD FOREIGN KEY ("organizer_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "meetings" ADD FOREIGN KEY ("org_unit_id") REFERENCES "org_units" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "agenda_items" ADD FOREIGN KEY ("meeting_id") REFERENCES "meetings" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "agenda_proposals" ADD FOREIGN KEY ("agenda_item_id") REFERENCES "agenda_items" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "meeting_participants" ADD FOREIGN KEY ("meeting_id") REFERENCES "meetings" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "notifications" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "reports" ADD FOREIGN KEY ("requested_by") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "org_units" ADD FOREIGN KEY ("parent_id") REFERENCES "org_units" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "user_roles" ADD FOREIGN KEY ("org_unit_id") REFERENCES "org_units" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "agenda_proposals" ADD FOREIGN KEY ("participant_id") REFERENCES "meeting_participants" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "meeting_participants" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "meeting_participants" ADD FOREIGN KEY ("external_person_id") REFERENCES "external_persons" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "meeting_participants" ADD FOREIGN KEY ("substitute_for_id") REFERENCES "meeting_participants" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "notifications" ADD FOREIGN KEY ("meeting_id") REFERENCES "meetings" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "reports" ADD FOREIGN KEY ("meeting_id") REFERENCES "meetings" ("id") DEFERRABLE INITIALLY IMMEDIATE;
